fix: navigation links in dark mode are too dark

--- a/css/styles.css
+++ b/css/styles.css
@@ -142,6 +142,10 @@ body.dark-mode footer {
 
 /* === Navigation Links === */
 
+body.dark-mode nav a:visited {
+    color: white;
+}
+
 .nav-left a.nav-link {
     text-decoration: none;
     color: inherit;
